fix (project-select) re-added missing vertx logofixes https://github.com/openshiftio/openshift.io/issues/2531

--- a/src/app/components/project-select/project-select.component.less
+++ b/src/app/components/project-select/project-select.component.less
@@ -93,5 +93,6 @@
 
 .Vert {
   &:extend(.icon-base);
-  background-image: url('../../../assets/images/vertx.svg');
+  background-image: url('../../../assets/images/vertx_logo.png');
+  background-size: 100% 50%;
 }
